--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "material-design-icons": "latest",
+    "mongodb": "^3.6.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
