--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "engines":
+  {
+    "node": ">=15.x"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build && next export",
