--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "material-design-icons": "latest",
-    "mongodb": "^3.6.3",
+    "mongodb": "latest",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
